# clank

./: .gitignore  Cargo.toml  SpriteConfig.json  Todo.md
resources/: SpriteConfig.json  WindowConfig.json  testmap.json
scripts/: test.lua  test.xml
src/: anim.rs  core.rs  error.rs  events.rs  graphics.rs  lib.rs  main.rs  map.rs  position.rs  script.rs  sprite.rs  state.rs  tilemap.rs  windowing.rs
src/graphics/: anim.rs  image.rs  imagewrapper.rs  mod.rs  sprite.rs  tilemap.rs  window.rs
src/registry/: mod.rs
