[package]
name = "clank"
version = "0.1.0"
authors = ["Paul Warner <paul.eliot.warner@gmail.com>"]
edition = "2018"

[[bin]]
name = "luatest"
path = "src/bin/luatest.rs"

[[bin]]
name = "drain"
path = "src/bin/drain.rs"

[dependencies]
specs = "0.15.1"
rand = "0.7.2"
log = "0.4.8"
fern = "0.5.8"
chrono = "0.4.7"
vulkano = "0.14.0"
vulkano-win = "0.14.0"
winit = "0.19.1"
image = "0.22.3"
vulkano-shaders = "0.14.0"
lazy_static = "1.4.0"
rusttype = "0.8.1"
rlua = "0.16.3"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
nalgebra = "0.18.1"