[package]
name = "clank"
version = "0.1.0"
authors = ["Paul Warner <paul.eliot.warner@gmail.com>"]
edition = "2018"

[[bin]]
name = "luatest"
path = "src/bin/luatest.rs"

[[bin]]
name = "drain"
path = "src/bin/drain.rs"

[dependencies]
specs = "0.15.1"
rand = "0.7.2"
log = "0.4.8"
fern = "0.5.9"
chrono = "0.4.9"
vulkano = "0.18.0"
vulkano-win = "0.18.0"
winit = "0.22.0"
image = "0.23.0"
vulkano-shaders = "0.18.0"
lazy_static = "1.4.0"
rusttype = "0.8.2"
rlua = "0.17.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
nalgebra = "0.19.0"
serde-xml-rs = "0.3.1"
serde_derive = "1.0.104"