[package]
name = "clank"
version = "0.1.0"
authors = ["Paul Warner <paul.eliot.warner@gmail.com>"]
edition = "2018"

[[bin]]
name = "luatest"
path = "src/bin/luatest.rs"

[[bin]]
name = "drain"
path = "src/bin/drain.rs"

[dependencies]
specs = "0.16.1"
rand = "0.8.0"
log = "0.4.11"
fern = "0.6.0"
chrono = "0.4.19"
vulkano = "0.19.0"
vulkano-win = "0.19.0"
winit = "0.22.1"
image = "0.23.0"
vulkano-shaders = "0.19.0"
lazy_static = "1.4.0"
rusttype = "0.9.2"
rlua = "0.17.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.44"
nalgebra = "0.23.2"
serde-xml-rs = "0.3.1"
serde_derive = "1.0.118"